Resolves: tdf#97065 gtk3: Date field displayed incomplete

a spinfield with a dropdown is sort of weird, we should
probably revisit this and see if SPIN and DROPDOWN
are mutually exclusive and for DROPDOWN use ComboBox styles

Change-Id: Id7f5c54974dc2dfd63ab30df18e14f6a67a8ea90